removal of unnecessary files.

--- a/floodpi.sh.template
+++ b/floodpi.sh.template
@@ -16,7 +16,7 @@ case "$1" in
     echo "Starting FloodPi"
     export PYTHONPATH=$PYTHONPATH:/home/pi/.virtualenvs/flood-pi/lib/python2.7/site-packages
     cd /home/pi/flood-pi
-    python floodpi.py -n bustardcelly@gmail.com
+    python floodpi.py -n YOUR_EMAIL_HERE
     ;;
   stop)
     echo "Stopping FloodPi"
